add header index.html

--- a/Index.html
+++ b/Index.html
@@ -9,7 +9,20 @@
     <link rel="stylesheet" href="assets/css/css/style.css"/>
 </head>
 <body>
-    s
+    <header class="header bg-white">
+        <!--start container-->
+            <div class="container h-100">
+                <div class="row h-100">
+                    <!--start header-top-->
+                    <div class="header_top">
+                        <div class="col-sm-12 col-md-8">1</div>
+                        <div class="col-sm-12 col-md-4">1</div>
+                    </div>
+                    <!--end header-top-->
+                </div>
+            </div>
+        <!--end container-->
+    </header>
 
 
     <script src="assets/js/bootstrap.min.js"></script>
