create header in index.htmk

--- a/Index.html
+++ b/Index.html
@@ -1,30 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>دیجی کالا مگ</title>
-    <link rel="stylesheet" href="assets/css/Bootstrap/bootstrap.rtl.min.css"/>
-    <link rel="stylesheet" href="assets/css/css/style.css"/>
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+        integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
+    <link rel="stylesheet" href="assets/css/Bootstrap/bootstrap.rtl.min.css" />
+    <link rel="stylesheet" href="assets/css/css/style.css" />
 </head>
+
 <body>
     <header class="header bg-white">
         <!--start container-->
-            <div class="container h-100">
-                <div class="row h-100">
-                    <!--start header-top-->
-                    <div class="header_top">
-                        <div class="col-sm-12 col-md-8">1</div>
-                        <div class="col-sm-12 col-md-4">1</div>
+        <div class="container h-100">
+            <div class="row h-100">
+                <!--start header-top-->
+                <div class="header_top">
+                    <div class="col-sm-12 col-md-8">
+                        <!--start hashtag-->
+                        <div class="hashtag d-flex align-items-center ">
+                            <!-- start hashtag__title-->
+                            <div class="hashtag__title">
+                                هشتگ های داغ :
+                            </div>
+                            <!--end hashtag__title-->
+                            <!--start hashtag__wrapper-->
+                            <div class="hashtag__wrapper d-flex align-items-center">
+                                <a href="#">#سامسونگ</a>
+                                <a href="#">#اپل</a>
+                                <a href="#">#سینمای جهان</a>
+                                <a href="#">#انیستاگرام</a>
+                                <a href="#">#بازیگر</a>
+                            </div>
+                            <!--end hashtag__wrapper-->
+                        </div>
+                        <!--end hashtag-->
                     </div>
-                    <!--end header-top-->
+                    <div class="col-sm-12 col-md-4 d-flex align-items-center justify-content-center">
+                        <!--start search -->
+                        <div class="search search-btn mx-4">
+                            <a href="#">
+                                <i class="fas fa-search"></i>
+                            </a>
+                        </div>
+                        <!--end search -->
+                        <!--start homepage__top--sep-->
+                        <hr class="vr mx-3 start homepage__top--sep">
+                        <!--end homepage__top--sep-->
+                        <!--start user-panel-->
+                        <div class="user-panel d-flex justify-content-center align-items-center">
+                            <span class="user-icon d-flex justify-content-center align-items-center">
+                                <i class="far fa-user-circle"></i>
+                            </span>
+                            <a href="#" class="login">
+                                <span>ورود</span>
+                                <span>/</span>
+                                <span>ثبت نام</span>
+                            </a>
+                        </div>
+                        <!--end user-panel-->
+                    </div>
                 </div>
+                <!--end header-top-->
             </div>
+        </div>
         <!--end container-->
     </header>
 
 
     <script src="assets/js/bootstrap.min.js"></script>
 </body>
+
 </html>
